[package]
name = "api-util"
version = "0.1.0"
authors = ["Mikail Bagishov <bagishov.mikail@yandex.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.40"
http = "0.2.4"
serde = "1.0.125"
serde_json = "1.0.64"
tracing = "0.1.26"
warp = "0.3.1"
