[package]
name = "api-util"
version = "0.1.0"
authors = ["Mikail Bagishov <bagishov.mikail@yandex.ru>"]
edition = "2018"

[dependencies]
anyhow = "1.0.40"
http = "0.2.4"
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
tracing = { version = "0.1.26", default-features = false }
warp = { version = "0.3.3", default-features = false }
