[package]
name = "buildinfo"
version = "0.1.0"
authors = ["Mikail Bagishov <bagishov.mikail@yandex.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.0-beta.2", features = ["std"], default-features = false }
once_cell = "1.7.2"
serde = { version = "1.0.126", features = ["derive"] }
