[package]
name = "puller"
version = "0.1.0"
authors = ["Mikail Bagishov <bagishov.mikail@yandex.ru>"]
edition = "2018"

[dependencies]
dkregistry = { git = "https://github.com/mikailbag/dkregistry-rs", branch = "config" }
thiserror = "1.0.24"
tokio = { version = "1.4.0", features = ["macros", "fs", "sync", "rt"] }
tracing = "0.1.25"
tracing-futures = "0.2.5"
serde_json = "1.0.64"
base64 = "0.13.0"
k8s-openapi = { version = "0.11.0", optional = true, default-features = false }
http = "0.2.3"
tokio-util = "0.6.5"

[features]
k8s = ["k8s-openapi"]

[dev-dependencies]
tracing-subscriber = "0.2.17"
tempfile = "3.2.0"
tokio = { version = "1.4.0", features = ["io-std", "rt-multi-thread"] }
k8s-openapi = { version = "0.11.0", features = ["v1_16"], default-features = false }
home = "0.5.3"
