[package]
name = "rpc"
version = "0.1.0"
authors = ["Mikail Bagishov <bagishov.mikail@yandex.ru>"]
edition = "2018"

[dependencies]
serde = { version = "1.0.115", features = ["derive"] }
hyper = "0.13.7"
serde_json = "1.0.57"
thiserror = "1.0.20"
tokio = { version = "0.2.22", features = ["tracing"] }
tracing = "0.1.19"
futures-util = "0.3.5"
reqwest = { version = "0.10.7", features = ["stream"] }
tower-util = "0.3.1"

[dev-dependencies]
tokio = { version = "0.2.22", features = ["macros"] }